@@ -28,7 +28,7 @@
  * each time you refresh the page you can simulate someone opening
  * the email containing the ghost graphic.
  */
-$subject = 'Testing...';
+$subject = randomSubject();
 $email = 'test'.rand().'@example.com';
 
 /**
@@ -103,6 +103,42 @@ function resetDatabase($db)
         }
     }
 }
+/**
+ * Generate Random Subject
+ *
+ * Used in the example to create a random subject,
+ * you do not need to keep this function in your app.
+ *
+ * @param string a short sentence is returned
+ */
+function randomSubject()
+	{
+		//Parts of Speach & Words
+        $articles = array("my", "the", "their", "a", "this", "that", "his", "her");
+		$adjective = array("lame", "giant", "good", "bad", "angry", "scary", "magnificient", "interesting");
+        $noun = array("dog", "bear", "cat", "dude", "bird", "girl", "boy", "person");
+        $verb = array("fell", "walked", "lived", "went", "flew", "ran", "hustled", "hid");
+		$preposition= array("through", "around", "behind", "near", "over", "below", "beneath", "above");
+
+		//Randomize the array
+        $random_article = array_rand($articles, 2);
+        $random_adjective = array_rand($adjective, 2);
+        $random_noun = array_rand($noun, 2);
+        $random_verb = array_rand($verb, 2);
+		$random_perposition = array_rand($preposition, 2);
+
+		//Build the sentence.
+		$sentence = ucfirst($articles[$random_article[0]]) . " "
+		. $adjective[$random_adjective[0]] . " "
+		. $noun[$random_noun[0]] . " "
+		. $verb[$random_verb[0]] . " "
+		. $preposition[$random_perposition[0]] . " "
+		. $articles[$random_article[1]] . " "
+		. $noun[$random_noun[1]] . ".";
+
+		//Return the sentence.
+		return $sentence;
+	}
 ?>
 
 <!-- // HTML //-->
